fintechdatahub-connect/k8s/base/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintechdatahub-connect-webapp-deployment
  labels:
    app: fintechdatahub-connect-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fintechdatahub-connect-webapp
  template:
    metadata:
      labels:
        app: fintechdatahub-connect-webapp
    spec:
      containers:
        - name: fintechdatahub-connect-webapp
          image: fintechdatahub-connect-webapp
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
