fintechdatahub-connect/k8s/base/rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintechdatahub-connect-rest-deployment
  labels:
    app: fintechdatahub-connect-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fintechdatahub-connect-rest
  template:
    metadata:
      labels:
        app: fintechdatahub-connect-rest
    spec:
      containers:
        - name: fintechdatahub-connect-rest
          image: fintechdatahub-connect-rest
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: fintechdatahub-connect-rest-service
  labels:
    app: fintechdatahub-connect-rest
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: fintechdatahub-connect-rest
