fintechdatahub-connect/k8s/base/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fintechdatahub-connect-webapp-service
  labels:
    app: fintechdatahub-connect-webapp
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
      name: http
  selector:
    app: fintechdatahub-connect-webapp
