fintechdatahub-connect/k8s/base/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintechdatahub-connect-webapp-deployment
  labels:
    app: fintechdatahub-connect-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fintechdatahub-connect-webapp
  template:
    metadata:
      labels:
        app: fintechdatahub-connect-webapp
    spec:
      containers:
        - name: fintechdatahub-connect-webapp
          image: fintechdatahub-connect-webapp
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: fintechdatahub-connect-webapp-service
  labels:
    app: fintechdatahub-connect-webapp
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: fintechdatahub-connect-webapp
