fintechdatahub-connect/k8s/base/ingress-setup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintechdatahub-connect-webapp-ingress
  namespace: web-app
  annotations:
    # Indica a GKE di creare un External Application Load Balancer
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fintechdatahub-connect-webapp-service
            port:
              number: 8080
